--- a/templates/projects/program_detail.html
+++ b/templates/projects/program_detail.html
@@ -46,8 +46,8 @@
 {% block content %}
     <div class="container">
         <div class="error-messages"></div>
-        {% for study in studies %}
-        <section class="program-study panel panel-primary" data-study-id="{{ study.id }}">
+        {% for project in projects %}
+        <section class="program-project panel panel-primary" data-project-id="{{ project.id }}">
             <div class="panel-heading clearfix">
                 <div class="dropdown pull-left">
                     {% if not program.is_public %}
@@ -56,52 +56,52 @@
                     <ul class="dropdown-menu">
 {#                        <li role="menuitem"><a href="">New Workbook</a></li>#}
                         {% if program.owner.id == user.id %}
-                        <li role="menuitem"><a data-toggle="modal" data-target="#delete-study-modal-{{ study.id }}" class="study-delete">Delete</a></li>
+                        <li role="menuitem"><a data-toggle="modal" data-target="#delete-project-modal-{{ project.id }}" class="project-delete">Delete</a></li>
                         {% endif %}
                         {% if shared %}
-                        <li role="menuitem"><a data-toggle="modal" data-target="#edit-study-details-modal-{{ study.id }}">Edit Details</a></li>
-{#                        <li role="menuitem"><a data-toggle="modal" data-target="#delete-study-modal-{{ study.id }}" class="study-delete">Delete</a></li>#}
+                        <li role="menuitem"><a data-toggle="modal" data-target="#edit-project-details-modal-{{ project.id }}">Edit Details</a></li>
+{#                        <li role="menuitem"><a data-toggle="modal" data-target="#delete-project-modal-{{ project.id }}" class="project-delete">Delete</a></li>#}
                         {% endif %}
                     </ul>
                 </div>
-                <h4 class="panel-title pull-left">{{ study.name }}</h4>
+                <h4 class="panel-title pull-left">{{ project.name }}</h4>
             </div>
             <div class="panel-body">
-                {% if study.get_status == 'Processing' %}
+                {% if project.get_status == 'Processing' %}
                 <div class="message message-info alert alert-dismissible fade in">
-                    <p>Study Data is currently being processed.</p>
+                    <p>Project Data is currently being processed.</p>
                     <a class="close" data-dismiss="alert" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></a>
                 </div>
-                {% elif study.get_status == 'Error' %}
+                {% elif project.get_status == 'Error' %}
                 <div class="message message-error alert alert-dismissible fade in">
-                    <p>Upload of study data has an error. Please delete the study and re-upload.</p>
+                    <p>Upload of project data has an error. Please delete the project and re-upload.</p>
                     <a class="close" data-dismiss="alert" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></a>
                 </div>
                 {% comment "Success message does not yet have technical implementation" %}
                 <div class="message message-success alert alert-dismissible fade in">
-                    Upload of study data is complete.
+                    Upload of project data is complete.
                     <a class="close" data-dismiss="alert" aria-label="Close"><i class="fa fa-times" aria-hidden="true"></i></a>
                 </div>
                 {% endcomment %}
                 {% endif %}
-                <p>{{ study.description }}</p>
+                <p>{{ project.description }}</p>
                 <dl>
                     <dt>Created</dt>
-                    <dd>{{ study.last_date_saved|date:'M d, Y, g:i a' }}</dd>
+                    <dd>{{ project.last_date_saved|date:'M d, Y, g:i a' }}</dd>
                     <dt>Number of Files</dt>
-                    <dd>{{ study.get_file_count }}</dd>
+                    <dd>{{ project.get_file_count }}</dd>
                     {% if not program.is_public %}
                         <dt>Cloud Storage Bucket Name</dt>
-                        <dd>{{ study.user_data_tables_set.all.0.google_bucket.bucket_name }}</dd>
+                        <dd>{{ project.user_data_tables_set.all.0.google_bucket.bucket_name }}</dd>
                         <dt>BigQuery Data Table(s)</dt>
-                        {% for item in study.get_bq_tables %}
+                        {% for item in project.get_bq_tables %}
                             <dd>{{ item }}</dd>
                         {% endfor %}
                     {% endif %}
                 </dl>
             </div>
         </section>
-        {% include "projects/study_modals.html" %}
+        {% include "projects/project_modals.html" %}
         {% endfor %}
 
     </div>
