-> sample_id and case_id are now sample_barcode and case_barcode in cohorts_samples. These name changes have been propogated to most parts of WebApp, Common, and API, but will no doubt need extensive testing. -> The Patients model has been deleted from Cohorts/models. -> sample_barcode was converted to a CharField with a max length of 45 chars, and indexed -> fetch_isbcgc_study_set has been renamed to fetch_isbcgc_project_set, and the corresponding sproc has also been renamed to get_isbcgc_project_set -> Patient and Participant were renamed to 'case' in most places; this has been propogated but will need double-checking

--- a/templates/cohorts/user-data.html
+++ b/templates/cohorts/user-data.html
@@ -186,7 +186,7 @@
                         <span class="total-values" id="user-data-total-samples">{% if user_data %}{{ metadata_counts.user_data_total  }}{% else %}NA{% endif %}</span>
                     </div>
                     <div class="row col-md-6">
-                        <span class="detail-label">Total Number of Participants:</span>
+                        <span class="detail-label">Total Number of Cases:</span>
                         <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                         <span class="total-values" id="user-data-total-participants">{% if user_data %}{{ metadata_counts.user_data_participants  }}{% else %}NA{% endif %}</span>
                     </div>
