--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -92,8 +92,8 @@
                                     <input {% if cohort.id in previously_selected_cohort_ids %}checked{% endif %} type="checkbox" name="id" value="{{ cohort.id }}" title="Cohort {{ cohort.id }} checkbox" aria-label="cohort-checkbox"/>
                                 </td>
                                 <td class="name-col"><a href="{% url 'cohort_details' cohort.id %}" title="{{ cohort.name|wrap_text }}">{{ cohort.name }}</a></td>
-                                <td class="sample-col">{#{ cohort.num_patients }#} {{ cohort.sample_size }} </td>
-                                <td>{{ cohort.patient_size }}</td>
+                                <td class="sample-col"> {{ cohort.sample_size }} </td>
+                                <td>{{ cohort.case_size }}</td>
                                 <td class="owner-col">
                                     {% if cohort.perm == 'Owner' %}
                                         You
@@ -151,7 +151,7 @@
                                 </td>
                                 <td class="name-col"><a href="{% url 'cohort_details' cohort.id %}">{{ cohort.name }}</a></td>
                                 <td class="sample-col"> {{ cohort.sample_size }} </td>
-                                <td>{{ cohort.patient_size }}</td>
+                                <td>{{ cohort.case_size }}</td>
                                 <td class="date-col">{{ cohort.last_date_saved|date:'M d, Y, g:i a' }}</td>
                             </tr>
                             {% endif %}
