--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -1,20 +1,24 @@
 {% if workbook.owner.id == user.id %}
 <!-- Edit Details Modal -->
-<div class="modal fade" id="edit-workbook-details-modal-{{ workbook.id }}" tabindex="-1" role="dialog" aria-labelledby="edit-workbook-header" aria-hidden="true">
+<div class="modal fade edit-workbook-details-modal" id="edit-workbook-details-modal-{{ workbook.id }}" tabindex="-1" role="dialog" aria-labelledby="edit-workbook-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="edit-workbook-header">Workbook Details</h4>
             </div>
-            <form id="edit-workbook-{{ workbook.id }}" method="POST" action="{% url 'workbook_edit' workbook.id %}">
+            <form class="edit-workbook-details" method="POST" action="{% url 'workbook_edit' workbook.id %}">
                 {% csrf_token %}
                 <div class="modal-body">
+                    <div class="unallowed-chars-alert-book alert alert-warning alert-dismissable" style="display: none;">
+                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        Your workbook's <span class="book-unallowed"></span> invalid characters (<span class="unallowed-chars-book"></span>). Please choose another <span class="book-fields"></span>.
+                    </div>
                     <label for="edit-workbook-name">Name (required)</label>
-                    <input id="edit-workbook-name" class="form-control" type="text" name="name" value="{{ workbook.name }}" required/>
+                    <input class="edit-workbook-name form-control" type="text" name="name" value="{{ workbook.name }}" required/>
                     <br>
                     <label for="edit-workbook-desc">Description (optional, max length is 2000 characters)</label>
-                    <textarea id="edit-workbook-desc" class="form-control" name="description" maxlength="2000">{{workbook.description }}</textarea>
+                    <textarea class="edit-workbook-desc form-control" name="description" maxlength="2000">{{workbook.description }}</textarea>
                 </div>
                 <div class="modal-footer">
                     <input type="submit" value="Update" class="btn btn-primary" />
