--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -256,9 +256,9 @@
                 </div>
                 <form id="save-cohort-{{ worksheet.id }}" class="save-cohort-form" method="POST" action="{% url 'save_cohort_from_plot' %}">
                     <div class="modal-body">
-                        <div id="unallowed-chars-alert" class="alert alert-warning alert-dismissable" style="display: none;">
+                        <div id="unallowed-chars-alert-cohort" class="alert alert-warning alert-dismissable" style="display: none;">
                             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                            Your cohort's name contains invalid characters (<span class="unallowed-chars"></span>). Please choose another name.
+                            Your cohort's name contains invalid characters (<span id="unallowed-chars-cohort"></span>). Please choose another name.
                         </div>
                         <label class="form-inline" for="{{ worksheet.id }}-new-cohort-name">New Cohort Name</label>
                         <input type="text" class="form-control" name="cohort-name" id="{{ worksheet.id }}-new-cohort-name" placeholder="Enter a name for the new cohort.">
