--- a/templates/workbooks/worksheet_modals.html
+++ b/templates/workbooks/worksheet_modals.html
@@ -43,21 +43,25 @@
 </div>
 
 <!-- Edit Worksheet Details Modal -->
-<div class="modal fade" id="edit-worksheet-details-modal-{{ worksheet.id }}" tabindex="-1" role="dialog" aria-labelledby="edit-workbook-header" aria-hidden="true">
+<div class="modal fade" id="edit-worksheet-details-modal-{{ worksheet.id }}" tabindex="-1" role="dialog" aria-labelledby="edit-worksheet-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Worksheet Details</h4>
+                <h4 id="edit-worksheet-header" class="modal-title">Worksheet Details</h4>
             </div>
-            <form id="edit-workbook" method="POST" action="{% url 'worksheet_edit' workbook.id worksheet.id %}">
+            <form class="edit-worksheet-details" method="POST" action="{% url 'worksheet_edit' workbook.id worksheet.id %}">
                 {% csrf_token %}
                 <div class="modal-body">
+                    <div class="unallowed-chars-alert-sheet alert alert-warning alert-dismissable" style="display: none;">
+                        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        Your worksheet's <span class="sheet-unallowed"></span> invalid characters (<span class="unallowed-chars-sheet"></span>). Please choose another <span class="sheet-fields"></span>.
+                    </div>
                     <label for="edit-sheet-name">Name (required)</label>
-                    <input id="edit-sheet-name" class="form-control" type="text" name="name" value="{{ worksheet.name }}"/>
+                    <input class="form-control edit-sheet-name" type="text" name="name" value="{{ worksheet.name }}"/>
                     <br>
                     <label for="edit-sheet-desc">Description (optional, max length is 2000 characters)</label>
-                    <textarea id="edit-sheet-desc" class="form-control" name="description" maxlength="2000">{{worksheet.description }}</textarea>
+                    <textarea class="form-control edit-sheet-desc" name="description" maxlength="2000">{{worksheet.description }}</textarea>
                 </div>
                 <div class="modal-footer">
                     <input type="submit" value="Update" class="btn btn-primary" />
