--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -59,6 +59,10 @@
 {% block content %}
 {% csrf_token %}
     <section class="col-lg-12">
+        <div id="unallowed-chars-alert" class="alert alert-warning alert-dismissable" style="display: none;">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            Your variable list's name contains invalid characters (<span class="unallowed-chars"></span>). Please choose another name.
+        </div>
          <div class="panel form-group panel-default">
             {% if existing_variable_list %}
                 <div class="panel-heading">
