changed loading text

--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -41,7 +41,7 @@
               <div class="bar"></div>
             </div>
             <div class="loading-text">
-                Data is being collected...
+                Collecting data...
             </div>
         </div>
 
