--- a/templates/GenespotRE/register_sa.html
+++ b/templates/GenespotRE/register_sa.html
@@ -37,6 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12">
+                <div id="invalid-sa-error"></div>
                 <h4>To register service account for {{ gcp_id }}, please follow these instructions:</h4>
                 <ul>
                     <li>
