working on cohort page with multiple program

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -37,7 +37,7 @@
             color: darken($isb-warning, 20%) !important
         &-data, &-ud-filters
             li
-                width: (100% / 2)
+                //width: (100% / 2)
     .filter-panel
         .heading-note
             font-style: italic
