--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -109,8 +109,8 @@
 
     <div class="row">
         <div class="tab-content data-tab-content">
-            {% include "cohorts/isb-cgc-data.html" %}
-            {% include "cohorts/user-data.html" %}
+{#            {% include "cohorts/isb-cgc-data.html" %}#}
+{#            {% include "cohorts/user-data.html" %}#}
         </div>
     </div>
 
