--- a/blink_sass/style.sass
+++ b/blink_sass/style.sass
@@ -5,9 +5,9 @@
 // --------------------------------------------
 // Import external styles here
 // --------------------------------------------
-@import url("/static/css/font-awesome.min.css")
-@import url("/static/css/vendor.css")
-@import url("/static/css/bootstrap-tokenfield.min.css")
+@import url("./font-awesome.min.css")
+@import url("./vendor.css")
+@import url("./bootstrap-tokenfield.min.css")
 
 // ----------------------------------
 // Import basic settings
