-> Added logging output to the allauth error page, will propogate to a later rebuild for easier debugging.

--- a/allauth/templates/socialaccount/authentication_error.html
+++ b/allauth/templates/socialaccount/authentication_error.html
@@ -8,4 +8,6 @@
 <h1>{% trans "Social Network Login Failure" %}</h1>
 
 <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+<p>Code: {{ auth_error.code }}, Error: {{ auth_error.exception }}</p>
+
 {% endblock %}
