-> Static files URL added to all JS and to the base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,9 @@
         </script>
         <!-- End Google Tag Manager -->
     {%  endif %}
+    <script>
+        var STATIC_FILES_URL = '{{ STATIC_FILES_URL }}';
+    </script>
 
 </head>
 <body id="body">
