-> #1800: sample totals not updating on cohort details page for existing cohorts, template vs, JS problem

--- a/templates/cohorts/isb-cgc-data.html
+++ b/templates/cohorts/isb-cgc-data.html
@@ -220,12 +220,12 @@
                                 <div class="row col-md-12 space-bottom-10">
                                     <span class="detail-label">Total Number of Samples:</span>
                                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                                    <span class="total-values" id="total-samples">{{ total_samples }}</span>
+                                    <span class="total-values isb-cgc-samples">{{ total_samples }}</span>
                                 </div>
                                 <div class="row col-md-12 space-bottom-10">
                                     <span class="detail-label">Total Number of Participants:</span>
                                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                                    <span class="total-values" id="total-participants">{{ total_patients }}</span>
+                                    <span class="total-values isb-cgc-participants">{{ total_patients }}</span>
                                 </div>
                                 <div class="row col-md-12 space-bottom-10">
                                     <span>Your Permissions: {{ cohort.perm.perm }}</span>
@@ -277,12 +277,12 @@
                                 <div class="row col-md-6">
                                     <span class="detail-label">Total Number of Samples:</span>
                                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                                    <span class="total-values" id="isb-cgc-data-total-samples">{{ metadata_counts.total }}</span>
+                                    <span class="total-values isb-cgc-samples">{{ metadata_counts.total }}</span>
                                 </div>
                                 <div class="row col-md-6">
                                     <span class="detail-label">Total Number of Participants:</span>
                                     <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
-                                    <span class="total-values" id="isb-cgc-data-total-participants">{{ metadata_counts.participants }}</span>
+                                    <span class="total-values isb-cgc-participants">{{ metadata_counts.participants }}</span>
                                 </div>
                             </div>
                         </div>
