--- a/templates/503.html
+++ b/templates/503.html
@@ -21,6 +21,6 @@
 {% block content %}
     <h4>The ISB-CGC is currently under-going site maintenance.</h4>
 
-    <p>We apologize for the inconvenience. To receive a notification when we're back, <a href="/">subscribe to our mailing list</a>.</p>
+    <p>We apologize for the inconvenience. To receive a notification when we're back, <a href="/">subscribe to our mailing list</a> or <a href="https://www.twitter.com/isb_cgc/">follow us on Twitter</a>.</p>
 
 {% endblock %}
