-> Timeouts aren't our real issue; moving back to 30s -> fixed a wrong view name bug in demo index template

--- a/templates/demo/index.html
+++ b/templates/demo/index.html
@@ -59,9 +59,9 @@
   {% else %}
     <div class="alert alert-danger" role="alert">You don't have any attributes</div>
   {% endif %}
-  <a href="{% url "index" %}?slo" class="btn btn-danger">Logout</a>
+  <a href="{% url "saml_index" %}?slo" class="btn btn-danger">Logout</a>
 {% else %}
-  <a href="{% url "index" %}?sso" class="btn btn-primary">Login</a> <a href="{% url "index" %}?sso2" class="btn btn-info">Login and access to attrs page</a>
+  <a href="{% url "saml_index" %}?sso" class="btn btn-primary">Login</a> <a href="{% url "saml_index" %}?sso2" class="btn btn-info">Login and access to attrs page</a>
 {% endif %}
 
 {% endblock %}
