-> Slight modifications to user data upload warning

--- a/templates/projects/disabled.html
+++ b/templates/projects/disabled.html
@@ -34,10 +34,15 @@
 {% endcomment %}
 
 {% block content %}
-    <h4>User data uploads are temporarily disabled. Any projects you have previously uploaded will still be
-        available in your <a href="{% url 'projects' %}">Saved Projects</a> list, and you can continue to
-        work with them, but new data cannot be added at this time.</h4>
+    <h4>User data uploads are temporarily disabled.</h4>
 
-    <p>We apologize for the inconvenience.</p>
+    <p>
+        Any projects you have previously uploaded will continue to be available in your
+        <a href="{% url 'projects' %}">Saved Projects</a> list, and you can continue to work with them, but new data
+        cannot be added at this time.
+    </p>
+    <p>
+        We apologize for the inconvenience, and will have user data uploads back online as soon as possible.
+    </p>
 
 {% endblock %}
