-> Reenabled the menubar on the announcement page for user data uploads

--- a/templates/projects/disabled.html
+++ b/templates/projects/disabled.html
@@ -46,4 +46,4 @@
 
 {% endblock %}
 
-{% block js_file %}{% static 'js/project_list.js' %}{% endblock %}
+{% block js_file %}{% static 'js/base.js' %}{% endblock %}
