--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -97,6 +97,81 @@
     </div>
 
     <div class="row cgc-user-data-type-tabs">
+        {% if cohort.id %}
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="cohort-selected-filters panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Current Filters</h4>
+                </div>
+                <div class="panel-body">
+                    {% for filter in cohort.get_current_filters %}
+                        <span class="filter-label label label-default space-right-5">{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
+                    {% empty %}
+                        <p>No filters have been applied to this cohort.</p>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="cohort-info panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Details</h4>
+                </div>
+                <div class="panel-body">
+                    <div class="row col-md-12 space-bottom-10">
+                        <span>Internal ISB-CGC Cohort ID: {{ cohort.id }}</span>
+                    </div>
+                    <div class="row col-md-12 space-bottom-10">
+                        <span class="detail-label">Total Number of Samples:</span>
+                        <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
+                        <span class="total-values" id="{{ program.id }}-data-total-samples">{{ total_samples }}</span>
+                    </div>
+                    <div class="row col-md-12 space-bottom-10">
+                        <span class="detail-label">Total Number of Participants:</span>
+                        <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
+                        <span class="total-values" id="{{ program.id }}-data-total-participants">{{ total_cases }}</span>
+                    </div>
+                    <div class="row col-md-12 space-bottom-10">
+                        <span>Your Permissions: {{ cohort.perm.perm }}</span>
+                    </div>
+                    <div class="row col-md-12 space-bottom-10">
+                        <span>Creation Filters: </span>
+                        <span class="applied-filters">
+                         {% for filter in cohort.get_creation_filters %}
+                             <span>{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
+                         {% empty %}
+                             There were no filters used to create this cohort.
+                         {% endfor %}
+                         </span>
+                    </div>
+                    <div class="row col-md-12 space-bottom-10">
+                        <span class="rev-history">Revision History:</span>
+                        <ul>
+                            {% for item in cohort.get_revision_history %}
+                                {%  if 'type' in item and item.type == 'filter' %}
+                                     <li class="applied-filters">
+                                        Applied Filters:
+                                         {% for filter in item.vals %}
+                                            <span>{{ filter.name|get_feat_displ_name }}: {{ filter.value|get_readable_name:filter.name }}</span>
+                                         {% endfor %}
+                                    </li>
+                                {%  else %}
+                                    <li>{{ item }}</li>
+                                {%  endif %}
+                            {% endfor %}
+                        </ul>
+                        {% if shared_with_users and cohort.perm == 'OWNER'%}
+                            <br>
+                            <p><strong>Shared With Users:</strong></p>
+                            <ul>
+                            {% for user in shared_with_users %}
+                                <li>{{ user.first_name }} {{ user.last_name }} [{{ user.email }}]</li>
+                            {% endfor %}
+                            </ul>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
         <div class="col-sm-12 col-md-12 col-lg-12">
             <div class="panel panel-default">
                 <ul class="nav nav-tabs nav-tabs-data" role="tablist">
